# digital-pet

./: .gitignore  CMakeLists.txt  GAME_IDEAS.txt  Makefile  README.md  \  build.sh  digital-pet
include/: Game.hpp  Input.hpp  Load_Save.hpp  Pet.hpp  Renderer.hpp  ncurses_app.hpp  proc.hpp
src/: Game.cpp  Input.cpp  Load_Save.cpp  Pet.cpp  Renderer.cpp  main.cpp  ncurses_app.cpp  proc.cpp
